2009-11-10  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Changes needed after r50760.

        * platform/graphics/wx/GraphicsContextWx.cpp:
        (WebCore::GraphicsContext::GraphicsContext):
        * platform/wx/wxcode/mac/carbon/non-kerned-drawing.cpp:
        (WebCore::drawTextWithSpacing):

2009-11-10  Alexey Proskuryakov  <ap@apple.com>

        Qt build fix.

        * platform/network/ResourceHandle.h: Only inherit from AuthenticationClient on platforms
        that use ResourceHandle as a delegate (Mac, CFNetwork, Curl).

2009-11-10  Beth Dakin  <bdakin@apple.com>

        Tiger build fix. No review needed.

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::sRGBColorSpaceRef):

2009-11-10  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=31312
        Decouple authentication panel callbacks from ResourceHandle

        No change in functionality.

        SocketStreamHandle also needs to request credentials, so it's not appropriate to store
        ResourceHandle as delegate.

        * WebCore.vcproj/WebCore.vcproj:
        * platform/network/AuthenticationClient.h: Added.
        Added a new interface for listening to authentication panel notifications.

        * WebCore.xcodeproj/project.pbxproj: Added AuthenticationClient.h. Let Visual Studio do what
        it wants with the project file.

        (WebCore::AuthenticationClient::ref): Using our usual method of exposing refcounting on an
        interface class.
        (WebCore::AuthenticationClient::deref): Ditto.

        * platform/network/ResourceHandle.h:
        (WebCore::ResourceHandle::refAuthenticationClient): Ditto.
        (WebCore::ResourceHandle::derefAuthenticationClient): Ditto.

        * platform/network/cf/AuthenticationCF.cpp:
        (WebCore::AuthenticationChallenge::AuthenticationChallenge):
        (WebCore::AuthenticationChallenge::platformCompare):